# ksef-tool

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md  update-docs-on-code-change.instructions.md
.github/workflows/: rust.yml
src/: main.rs  validation.rs
