[package]
name = "ksef-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
invoice-gen = "0.0.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
