[package]
name = "ksef-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
invoice-gen = { git = "https://github.com/maciejwalesiak/invoice-gen.git", branch = "fa-3-oo-net-total-support"}
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
httpmock = "0.7"
